adam added to FC layer

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -25,9 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
     "class FC_Layer:\n",
     "\n",
-    "    def __init__(self, in_dim, out_dim, alpha=0.01, beta1=0.9, beta2=0.999, epsilon=1e-8, Theta=None, bias=None):\n",
+    "    def __init__(self, in_dim, out_dim, alpha=0.01, beta1=0.9, beta2=0.999, epsilon=1e-8, W=None, bias=None):\n",
     "        self.alpha = alpha\n",
     "        self.beta1 = beta1\n",
     "        self.beta2 = beta2\n",
@@ -37,11 +40,11 @@
     "        self.m_bias = 0\n",
     "        self.v_bias = 0\n",
     "        self.t = 0  # timestep\n",
-    "        if Theta == None:\n",
-    "            self.Theta = np.random.randn(in_dim, out_dim)/fac\n",
+    "        if W == None:\n",
+    "            self.W = np.random.randn(in_dim, out_dim)/fac\n",
     "\n",
     "        else:\n",
-    "            self.Theta = Theta\n",
+    "            self.W = W\n",
     "\n",
     "        if bias == None:\n",
     "            self.bias = np.random.randn(out_dim)/fac\n",
@@ -52,24 +55,26 @@
     "\n",
     "    def forward_pass(self, X):\n",
     "        self.X = X\n",
-    "        self.z = np.matmul(X, self.Theta) + self.bias\n",
+    "        self.z = np.matmul(X, self.W) + self.bias\n",
     "        return self.z\n",
     "\n",
     "    \n",
     "    def backprop(self, grad_previous):\n",
     "        t= self.X.shape[0]\n",
-    "        self.grad = np.matmul((self.X.transpose()), grad_previous)/t\n",
+    "        self.grad_W = np.matmul((self.X.transpose()), grad_previous)/t\n",
     "        self.grad_bias = (grad_previous.sum(axis=0))/t\n",
-    "        self.grad_a = np.matmul(grad_previous, self.Theta.transpose())\n",
+    "        self.grad_a = np.matmul(grad_previous, self.W.transpose())\n",
     "        return self.grad_a\n",
     "\n",
     "\n",
     "\n",
     "    def applying_sgd(self):\n",
-    "            self.Theta = self.Theta - (self.alpha*self.grad)\n",
-    "            self.bias = self.bias - (self.alpha*self.grad_bias)\n",
+    "        \n",
+    "        self.W = self.W - (self.alpha*self.grad)\n",
+    "        self.bias = self.bias - (self.alpha*self.grad_bias)\n",
     "            \n",
     "    def applying_adam(self):\n",
+    "        \n",
     "        self.t += 1\n",
     "\n",
     "        # Update biased first moment estimate\n",
@@ -89,7 +94,7 @@
     "        v_hat_bias = self.v_bias / (1 - np.power(self.beta2, self.t))\n",
     "\n",
     "        # Update parameters\n",
-    "        self.Theta -= self.alpha * m_hat / (np.sqrt(v_hat) + self.epsilon)\n",
+    "        self.W -= self.alpha * m_hat / (np.sqrt(v_hat) + self.epsilon)\n",
     "        self.bias -= self.alpha * m_hat_bias / (np.sqrt(v_hat_bias) + self.epsilon)           \n",
     "            "
    ]
