NN class integrated

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -98,6 +98,52 @@
     "        self.bias -= self.alpha * m_hat_bias / (np.sqrt(v_hat_bias) + self.epsilon)           \n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class softmax:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "         \n",
+    "    \n",
+    "    def forward_pass(self ,z):\n",
+    "        self.z = z \n",
+    "        self.a = np.zeros(self.z.shape)\n",
+    "        self.a = z/np.sum(z,axis =1 , keepdims = True )\n",
+    "        return self.a\n",
+    "    \n",
+    "    def expansion(self):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNN :\n",
+    "    def __init__(self , Network):\n",
+    "        self.Network = Network\n",
+    "        \n",
+    "    def forward_pass(self , X):\n",
+    "        n = X\n",
+    "        for i in self.Network:\n",
+    "            n=i.forward_pass(n) \n",
+    "        return n\n",
+    "    def backprop(self , Y):\n",
+    "        m = Y\n",
+    "        count = 1\n",
+    "        for i in (reversed(self.Network)):\n",
+    "            m = i.backprop(m)\n",
+    "            \n",
+    "    def applying_sgd(self):\n",
+    "        for i in self.Network:\n",
+    "            i.applying_sgd()"
+   ]
   }
  ],
  "metadata": {
