--- a/RMbipolarNN.ipynb
+++ b/RMbipolarNN.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "zwFnJsE6vjf8"
       },
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "4RhnRTgE0Off"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
           "height": 424
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +712,7 @@
       "metadata": {
         "id": "fl2jBSmq0WPF"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -728,7 +728,7 @@
       "metadata": {
         "id": "qOunFnQh0hQd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +757,7 @@
       "metadata": {
         "id": "jM5eFHuA0jbc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -784,7 +784,7 @@
       "metadata": {
         "id": "SKBNGQ6r9KwD"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -820,7 +820,7 @@
       "metadata": {
         "id": "xNxbnDcw9El0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +855,7 @@
       "metadata": {
         "id": "o55oFRkQ8eFj"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -880,7 +880,7 @@
       "metadata": {
         "id": "TMnv7RF09QHx"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +910,7 @@
       "metadata": {
         "id": "rmqMvtxL9XI9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -945,7 +945,7 @@
       "metadata": {
         "id": "KCYg6MRy9i9Q"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -992,7 +992,7 @@
       "metadata": {
         "id": "-S0ly0YF9nXw"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1021,7 +1021,7 @@
       "metadata": {
         "id": "LWf5R_T_9wQK"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1067,12 +1067,14 @@
       "metadata": {
         "id": "-nFe6SEl-OZg"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "parameters, costs = L_layer_model(train_x, train_y, layers_dims, num_iterations = 2500, print_cost = True)"
+      ],
       "metadata": {
         "id": "3UYUHzd0FQST"
       },
