1.chromedriver directory changed 2. BPI extractor function integration ongoing

--- a/Project venv/test.ipynb
+++ b/Project venv/test.ipynb
@@ -618,7 +618,236 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "index = 5\n",
+    "\n",
+    "    file = \"D:\\summer 2023\\Sanskar\\AboutDataBPI.csv\"\n",
+    "    preferences = {\"download.default_directory\": \"D:\\\\summer 2023\\\\Sanskar\\\\dataplace\\\\BPI\"}\n",
+    "    options.add_experimental_option(\"prefs\", preferences)\n",
+    "    driver = webdriver.Chrome(executable_path=r'D:\\summer 2023\\Sanskar\\chromedriver.exe', chrome_options=options)\n",
+    "    driver.get('http://srs2.cat.ernet.in:8100/servlet/Indus2BPIDataDownloadFormHA')\n",
+    "\n",
+    "    hours = driver.find_element(By.XPATH,\n",
+    "        '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[4]/select')\n",
+    "    hours.click()\n",
+    "    hours.send_keys('0')\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    min = driver.find_element(By.XPATH,\n",
+    "        '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[5]/select')\n",
+    "    min.click()\n",
+    "    min.send_keys('0')\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    timeduration = driver.find_element(By.XPATH,\n",
+    "        '/html/body/center/table/tbody/tr/td/form/center[1]/table/tbody/tr/td[4]/select')\n",
+    "    timeduration.click()\n",
+    "    timeduration.send_keys('4 hrs')\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    current_time = datetime.datetime.now()\n",
+    "    p_month = 6  # current_time.month - 1\n",
+    "    day = 12  # current_time.day\n",
+    "\n",
+    "    # from numeric to half month name using fxn above mmm\n",
+    "    c_month = p_month\n",
+    "    c_month = mmm(c_month)\n",
+    "\n",
+    "    sel_month = driver.find_element(By.XPATH,\n",
+    "        '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[2]/select')\n",
+    "    sel_month.click()\n",
+    "    sel_month.send_keys(c_month)\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    t_day = day  # temp day is t_day\n",
+    "    hh = {0, 4, 8, 12, 16, 20}\n",
+    "    maxdays = ddd(p_month)\n",
+    "    while t_day <= maxdays:\n",
+    "        if t_day < 10:\n",
+    "            day1 = padding(t_day)\n",
+    "        else:\n",
+    "            day1 = str(t_day)\n",
+    "        date = day1 + c_month + '2023'\n",
+    "        if os.path.isfile('D:\\\\summer 2023\\\\Sanskar\\\\extracted\\\\BPI\\\\' + 'BPI' + date + '.csv'):\n",
+    "            t_day += 1\n",
+    "            continue\n",
+    "        if t_day == 22:\n",
+    "            t_day += 1\n",
+    "            day1 = '222'\n",
+    "        for h in hh:\n",
+    "            try:\n",
+    "                if h < 10:\n",
+    "                    hr = padding(h)\n",
+    "                else:\n",
+    "                    hr = str(h)\n",
+    "                hours = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[4]/select')\n",
+    "                hours.click()\n",
+    "                hours.send_keys(hr)\n",
+    "                # time.sleep(1)\n",
+    "\n",
+    "\n",
+    "                sel_day = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[1]/select')\n",
+    "                sel_day.click()\n",
+    "                sel_day.send_keys(day1)\n",
+    "                # time.sleep(1)\n",
+    "                time.sleep(2)\n",
+    "\n",
+    "                driver.find_element(By.XPATH, '/html/body/center/table/tbody/tr/td/form/center[3]/input[1]').click()\n",
+    "                driver.find_element(By.XPATH, '/html/body/center/table/tbody/tr/td/form/center[3]/input[2]').click()\n",
+    "                csvData = [{'DATE': day1 + c_month + '2023', 'TIME': hr + '00 hrs', 'FOUND': 'YES'}]\n",
+    "                with open(file, 'a') as csvfile:\n",
+    "                    writer = csv.DictWriter(csvfile, fieldnames=fields)\n",
+    "\n",
+    "                    writer.writerows(csvData)\n",
+    "                sel_month = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[2]/select')\n",
+    "                sel_month.click()\n",
+    "                sel_month.send_keys(c_month)\n",
+    "                # time.sleep(1)\n",
+    "\n",
+    "                timeduration = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[1]/table/tbody/tr/td[4]/select')\n",
+    "                timeduration.click()\n",
+    "                timeduration.send_keys('4 hrs')\n",
+    "                # time.sleep(1)\n",
+    "\n",
+    "                min = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[5]/select')\n",
+    "                min.click()\n",
+    "                min.send_keys('0')\n",
+    "                # time.sleep(1)\n",
+    "            except:\n",
+    "                driver.find_element(By.XPATH, '/html/body/center[2]/a/h2/b').click()\n",
+    "                csvData = [{'DATE': day1 + c_month + '2023', 'TIME': hr + '00 hrs', 'FOUND': 'NO'}]\n",
+    "                with open(file, 'a') as csvfile:\n",
+    "                    writer = csv.DictWriter(csvfile, fieldnames=fields)\n",
+    "                    writer.writerows(csvData)\n",
+    "        try:\n",
+    "            src = \"D:\\\\summer 2023\\\\Sanskar\\\\dataplace\\\\BPI\"\n",
+    "            save = \"D:\\\\summer 2023\\\\Sanskar\\\\extracted\\\\temp5\"\n",
+    "\n",
+    "            extension = \".zip\"\n",
+    "\n",
+    "            os.chdir(src)\n",
+    "            for item in os.listdir(src):\n",
+    "                if item.endswith(extension):\n",
+    "                    file_name = os.path.abspath(item)  # to get full path\n",
+    "                    zip_ref = zipfile.ZipFile(file_name)\n",
+    "                    zip_ref.extractall(save)\n",
+    "                    zip_ref.close()\n",
+    "            if t_day < 10:\n",
+    "                day1 = padding(t_day)\n",
+    "            else:\n",
+    "                day1 = str(t_day)\n",
+    "            extract.ex(day1, c_month, save, index)\n",
+    "        except:\n",
+    "            print('no data')\n",
+    "        t_day = t_day + 1\n",
+    "\n",
+    "    p_month = p_month + 1\n",
+    "    driver.find_element(By.XPATH, '/html/body/center/table/tbody/tr/td/form/center[3]/input[2]').click()  # refresh\n",
+    "\n",
+    "    c_month = p_month\n",
+    "    c_month = mmm(c_month)\n",
+    "\n",
+    "    sel_month = driver.find_element(By.XPATH,\n",
+    "        '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[2]/select')\n",
+    "    sel_month.click()\n",
+    "    sel_month.send_keys(c_month)\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    t_day = 1\n",
+    "\n",
+    "    while t_day <= day:\n",
+    "        if t_day < 10:\n",
+    "            day1 = padding(t_day)\n",
+    "        else:\n",
+    "            day1 = str(t_day)\n",
+    "        date = day1 + c_month + '2023'\n",
+    "        if os.path.isfile('D:\\\\summer 2023\\\\Sanskar\\\\extracted\\\\BPI\\\\' + 'BPI' + date + '.csv'):\n",
+    "            t_day += 1\n",
+    "            continue\n",
+    "        if t_day == 22:\n",
+    "            t_day += 1\n",
+    "            continue\n",
+    "        for h in hh:\n",
+    "\n",
+    "            try:\n",
+    "                if h < 10:\n",
+    "                    hr = padding(h)\n",
+    "                else:\n",
+    "                    hr = str(h)\n",
+    "\n",
+    "                hours = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[4]/select')\n",
+    "                hours.click()\n",
+    "                hours.send_keys(hr)\n",
+    "                # time.sleep(1)\n",
+    "\n",
+    "                sel_day = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[1]/select')\n",
+    "                sel_day.click()\n",
+    "                sel_day.send_keys(day1)\n",
+    "                # time.sleep(1)\n",
+    "                time.sleep(2)\n",
+    "                driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[3]/input[1]').click()  # download\n",
+    "                driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[3]/input[2]').click()  # refresh\n",
+    "                csvData = [{'DATE': day1 + c_month + '2023', 'TIME': hr + '00 hrs', 'FOUND': 'YES'}]\n",
+    "                with open(file, 'a') as csvfile:\n",
+    "                    writer = csv.DictWriter(csvfile, fieldnames=fields)\n",
+    "                    writer.writerows(csvData)\n",
+    "\n",
+    "                sel_month = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[2]/select')\n",
+    "                sel_month.click()\n",
+    "                sel_month.send_keys(c_month)\n",
+    "                # time.sleep(1)\n",
+    "\n",
+    "\n",
+    "                timeduration = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[1]/table/tbody/tr/td[4]/select')\n",
+    "                timeduration.click()\n",
+    "                timeduration.send_keys('4 hrs')\n",
+    "                # time.sleep(1)\n",
+    "\n",
+    "                min = driver.find_element(By.XPATH,\n",
+    "                    '/html/body/center/table/tbody/tr/td/form/center[2]/table/tbody/tr[2]/td[5]/select')\n",
+    "                min.click()\n",
+    "                min.send_keys('0')\n",
+    "                # time.sleep(1)\n",
+    "            except:\n",
+    "                driver.find_element(By.XPATH, \"/html/body/center[2]/a/h2/b \").click()\n",
+    "                csvData = [{'DATE': day1 + c_month + '2023', 'TIME': hr + '00 hrs', 'FOUND': 'NO'}]\n",
+    "                with open(file, 'a') as csvfile:\n",
+    "                    writer = csv.DictWriter(csvfile, fieldnames=fields)\n",
+    "                    writer.writerows(csvData)\n",
+    "\n",
+    "        src = \"D:\\\\summer 2023\\\\Sanskar\\\\dataplace\\\\BPI\"\n",
+    "        save = \"D:\\\\summer 2023\\\\Sanskar\\\\extracted\\\\temp5\"\n",
+    "        extension = \".zip\"\n",
+    "        try:\n",
+    "            os.chdir(src)\n",
+    "            for item in os.listdir(src):\n",
+    "                if item.endswith(extension):\n",
+    "                    file_name = os.path.abspath(item)  # to get full path\n",
+    "                    zip_ref = zipfile.ZipFile(file_name)\n",
+    "                    zip_ref.extractall(save)\n",
+    "                    zip_ref.close()\n",
+    "\n",
+    "            if t_day < 10:\n",
+    "                day1 = padding(t_day)\n",
+    "            else:\n",
+    "                day1 = str(t_day)\n",
+    "            extract.ex(day1, c_month, save, index)\n",
+    "        except:\n",
+    "            print('no data')\n",
+    "\n",
+    "        t_day = t_day + 1"
+   ]
   }
  ],
  "metadata": {
